@@ -4,13 +4,15 @@ license = Perl_5
 copyright_holder = Graham Ollis
 copyright_year   = 2012
 
-version = 0.96
+version = 0.97
 
 [@Filter]
 -bundle = @Basic
 -remove = UploadToCPAN
 -remove = Readme
 -remove = ExtraTests
+
+[Author::Plicease::Tests]
 
 [PodWeaver]
 [NextRelease]
