@@ -6,8 +6,14 @@ pod_spelling_system:
 
 pod_coverage:
   private:
+    - .*#BUILDARGS
     - App::Plicease::Dev.*#main
     - App::Plicease::Dev::RemoveTrailingSpace#recurse
     - Dist::Zilla::PluginBundle::Author::Plicease#configure
     - Dist::Zilla::Plugin::Author::Plicease::.*#after_mint
     - Dist::Zilla::Plugin::Author::Plicease::.*#before_build
+    - Dist::Zilla::Plugin::Author::Plicease::.*#make_module
+    - Dist::Zilla::Plugin::Author::Plicease::.*#setup_installer
+    - Dist::Zilla::Plugin::Author::Plicease::.*#test
+    - Dist::Zilla::Plugin::Author::Plicease::.*#gather.*
+    - Dist::Zilla::Plugin::Author::Plicease::OSPrereqsNot#metadata
