@@ -1,6 +1,8 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+  - rm [Author::Plicease::Inc] as it was a mistake anyway
+  - provide a basic release.yml if doesn't already exist
 
 0.96      2013-05-30 04:58:00 America/New_York
   - use prove -b instead of prove -l for release tests
